--- a/app/src/main/res/layout/item_layout_superhero.xml
+++ b/app/src/main/res/layout/item_layout_superhero.xml
@@ -56,7 +56,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tv_superhero_name"
                 app:layout_constraintStart_toStartOf="@+id/tv_superhero_name"
-                app:layout_constraintTop_toBottomOf="@+id/tv_superhero_name" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_superhero_name"
+                tools:text="BirthPlace" />
 
             <ImageView
                 android:id="@+id/iv_superhero_image"
