--- a/app/src/main/res/layout/item_layout_superhero.xml
+++ b/app/src/main/res/layout/item_layout_superhero.xml
@@ -36,38 +36,29 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:gravity="center"
+                android:text="@string/name"
                 android:textColor="@color/primary_text"
-                android:textSize="14sp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_superhero_image"
                 tools:text="Name" />
-
-            <TextView
-                android:id="@+id/tv_superhero_birthPlace"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:gravity="center"
-                android:textColor="@color/primary_text"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tv_superhero_name"
-                app:layout_constraintStart_toStartOf="@+id/tv_superhero_name"
-                app:layout_constraintTop_toBottomOf="@+id/tv_superhero_name"
-                tools:text="BirthPlace" />
 
             <ImageView
                 android:id="@+id/iv_superhero_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="8dp"
+                android:contentDescription="@string/superhero_list_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+                app:srcCompat="@drawable/ic_launcher_foreground"
+                tools:ignore="ImageContrastCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
