--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,14 @@
     <style name="Base.Theme.TDCertificacion" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimaryDark">@color/dark_primary_color</item>
+        <item name="colorPrimaryVariant">@color/light_primary_color</item>
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="iconTint">@color/text_icons</item>
+        <item name="colorAccent">@color/accent_color</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="dividerColor">@color/divider_color</item>
     </style>
 
     <style name="Theme.TDCertificacion" parent="Base.Theme.TDCertificacion" />
